--- a/index.html
+++ b/index.html
@@ -1017,8 +1017,8 @@
     <div class="map" id="map"></div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="build/js/stars.js"></script>
-<script src="build/js/main.js"></script>
+<script src="build/javascript/stars.js"></script>
+<script src="build/javascript/main.js"></script>
 <script>
     function initMap() {
         var uluru = {lat: 46.28, lng: 30.44};
